// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSummaryDataViewTesting renders correctly 1`] = `
<View
  style={
    Object {
      "marginRight": 0,
      "width": 140,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#6f6d7b",
        "fontFamily": "Work Sans Regular",
        "fontSize": 12,
        "lineHeight": 14,
        "marginBottom": 4,
      }
    }
  >
    Test title
  </Text>
  <Text
    style={
      Object {
        "color": "#312e43",
        "fontFamily": "Work Sans Regular",
        "fontSize": 16,
        "lineHeight": 19,
      }
    }
  >
    2022
  </Text>
</View>
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "marginRight": 0,
      "width": 140,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#6f6d7b",
        "fontFamily": "Work Sans Regular",
        "fontSize": 12,
        "lineHeight": 14,
        "marginBottom": 4,
      }
    }
    testID="data-view-title"
  >
    Test title
  </Text>
  <Text
    style={
      Object {
        "color": "#312e43",
        "fontFamily": "Work Sans Regular",
        "fontSize": 16,
        "lineHeight": 19,
      }
    }
  >
    2022
  </Text>
</View>
`;
